refactor: 헥사고날 아키텍처 전환
서비스와 컨트롤러의 영속성 직접 의존을 제거하고 application port와 adapter를 도입했습니다.

아키텍처 경계 테스트를 강화해 service/controller/application 계층의 repository/entity 참조를 차단했습니다.

검증: java -cp gradle/wrapper/gradle-wrapper.jar org.gradle.wrapper.GradleWrapperMain test --no-daemon